# dafiti_backend_challenge

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  data.csv  docker-compose.yml  pyproject.toml  requirements.txt
api/: settings.py  urls.py
api/apps/shoes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/apps/shoes/migrations/: 0001_initial.py  0002_alter_shoes_width.py  0003_alter_shoes_image.py
